--- a/src/components/views/home/Rigth/inputs/inputs.css
+++ b/src/components/views/home/Rigth/inputs/inputs.css
@@ -4,24 +4,5 @@
   margin-left: 10px;
   height: 100vh;
   border-radius: 5px;
-}
-
-.input_details > div {
-  display: flex;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.input_details > div > .MuiSvgIcon-root {
-  margin-right: 20px;
-  color: #151a1a;
-  margin-left: 5px;
-}
-
-.input_details > div > input {
-  outline: 0;
-  border: none;
-  padding: 8px;
-  font-size: 16px;
-  width: 70%;
+  overflow-y: scroll;
 }
