--- a/src/components/views/home/Rigth/inputs/inputComponents/personalDetails/personal.css
+++ b/src/components/views/home/Rigth/inputs/inputComponents/personalDetails/personal.css
@@ -21,3 +21,22 @@
 .personal > h1 {
   text-align: center;
 }
+
+@media(max-width:600px){
+
+  .personal > h1{
+    font-size: 16px;
+  }
+  .personal_details > div > input{
+    font-size: 13px;
+  }
+}
+
+@media(max-width:450px){
+  .personal > h1{
+    font-size: 14px;
+  }
+  .personal_details > div > input{
+    font-size: 11px;
+  }
+}
